tests/grammar/schema/type/combination_5_type_fail/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:26:17
   |
26 |                 "firstName": "Alice",
   |                 ^ expected int, got str(Alice)
   |
 --> ${CWD}/main.k:2:5
  |
2 |     firstName: int
  |     ^ variable is defined here, its type is int, but got str(Alice)
  |